Wicket done except Residency Forms + Sync AUT-79 + different way how to run cucumber