@@ -297,6 +297,82 @@
     </dependencies>
 
     <profiles>
+
+        <profile>
+            <id>Runner</id>
+            <build>
+                <plugins>
+                    <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.18.1</version>
+                    <executions>
+                    <execution>
+                    <id>acceptance-tests</id>
+                    <phase>integration-test</phase>
+                    <goals>
+                    <goal>test</goal>
+                    </goals>
+                    <configuration>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <testFailureIgnore>true</testFailureIgnore>
+
+                    <forkCount>5</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <useFile>false</useFile>
+                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <includes>
+                    <include>**/runner/RunnerTest.class</include>
+                    </includes>
+                    </configuration>
+                    </execution>
+                    </executions>
+                    </plugin>
+
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                        <!--<version>2.18.1</version>-->
+                        <!--<configuration>-->
+                            <!--<redirectTestOutputToFile>true</redirectTestOutputToFile>-->
+                            <!--<testFailureIgnore>false</testFailureIgnore>-->
+
+                            <!--<forkCount>4</forkCount>-->
+                            <!--<reuseForks>false</reuseForks>-->
+                            <!--<useFile>false</useFile>-->
+                            <!--<includes>-->
+                                <!--<include>**/RunnerTest.class</include>-->
+                            <!--</includes>-->
+                        <!--</configuration>-->
+                    <!--</plugin>-->
+
+                    <plugin>
+                        <groupId>net.masterthought</groupId>
+                        <artifactId>maven-cucumber-reporting</artifactId>
+                        <version>0.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>execution</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
+                                    <projectName>cucumber-jvm-example</projectName>
+                                    <outputDirectory>${project.build.directory}/Runner-Cucumber-Reports</outputDirectory>
+                                    <cucumberOutput>${project.build.directory}/Runner-Cucumber-Json/</cucumberOutput>
+                                    <enableFlashCharts>true</enableFlashCharts>
+                                    <skippedFails>false</skippedFails>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>Login</id>
             <build>
